<resources>
    <string name="app_name">weather_app</string>
	<string name="settings">Settings</string>
	<string name="favorite">Favorite</string>
	<string name="search">Search</string>
	<string name="temperature_unit">Temperature Unit</string>
	<string name="temperature_unit_celsius">ºC</string>
	<string name="temperature_unit_fahrenheit">ºF</string>
	<string name="description_language">Description Language</string>
	<string name="description_language_english">English (EN)</string>
	<string name="description_language_portuguese">Portuguese (PT)</string>
	<string name="save">SAVE</string>
	<string name="search_button">SEARCH</string>
	<string name="city">City</string>
</resources>
