<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_marginStart="16dp"
	android:layout_marginEnd="16dp"
	tools:context=".SettingsFragment">

	<TextView
		android:id="@+id/textViewTemperatureUnit"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="16dp"
		android:text="@string/temperature_unit"
		android:textColor="@color/black"
		android:textStyle="bold" />

	<RadioGroup
		android:id="@+id/radioGroupTemperatureUnit"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/textViewTemperatureUnit"
		android:orientation="horizontal">

		<RadioButton
			android:id="@+id/rButtonTemperatureUnitCelsius"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/temperature_unit_celsius" />

		<RadioButton
			android:id="@+id/rButtonTemperatureUnitFahrenheit"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/temperature_unit_fahrenheit" />
	</RadioGroup>

	<TextView
		android:id="@+id/textViewDescriptionLanguage"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/radioGroupTemperatureUnit"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="16dp"
		android:text="@string/description_language"
		android:textColor="@color/black"
		android:textStyle="bold" />

	<RadioGroup
		android:id="@+id/radioGroupDescriptionLanguage"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/textViewDescriptionLanguage"
		android:orientation="horizontal">
		<RadioButton
			android:id="@+id/rButtonDescriptionLanguageEnglish"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/description_language_english" />

		<RadioButton
			android:id="@+id/rButtonDescriptionLanguagePortuguese"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/description_language_portuguese" />
	</RadioGroup>

	<Button
		android:id="@+id/buttonSave"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/radioGroupDescriptionLanguage"
		android:layout_marginTop="16dp"
		android:text="@string/save" />

</RelativeLayout>
